# workmate

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
coffee_reports/: cli.py  loader.py  models.py  renderer.py
coffee_reports/reports/: __init__.py  median_coffee.py  registry.py
docs/: cli_sequence.mmd  example-run.txt
tests/: conftest.py  test_cli.py  test_loader.py  test_median_coffee.py  test_renderer.py
